product selection page added

--- a/MTZfront/src/app/app.component.html
+++ b/MTZfront/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- <app-login-page></app-login-page> -->
 
-<!-- <app-main-cards></app-main-cards> -->
+<app-main-cards></app-main-cards>
 
-<app-landing-page></app-landing-page>
+<!-- <app-landing-page></app-landing-page> -->
 
 <router-outlet></router-outlet>
