--- a/MTZfront/src/app/landing-page/landing-page.component.html
+++ b/MTZfront/src/app/landing-page/landing-page.component.html
@@ -1,12 +1,44 @@
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+
 <div class="bg"></div>
 
 <div class="screen-divs">
     <div class="screen-left">
-        <h1>MTZ Rastreamento</h1>
+
+        <div class="main-text">
+            <h1>MTZ Rastreamento</h1>
+            <h4>As melhores soluções de rastreamento para seu veículo</h4>
+        </div>
+
+
+        <div class="buttons">
+            <div id="container">
+                <button class="learn-more">
+                    <span class="circle" aria-hidden="true">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">CONHECER</span>
+                </button>
+            </div>
+
+            <div style="width: 10%;"></div>
+
+            <div id="container">
+                <button class="learn-more">
+                    <span class="circle" aria-hidden="true">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">ENTRAR</span>
+                </button>
+            </div>
+        </div>
+
     </div>
 
     <div class="screen-right">
-        <img src="../../assets/img/logos/transpmain (1).png" alt="Italian Trulli">
+        <img src="../../assets/img/logos/transpmain (1).png" alt="Logo MTZ Rastreamento">
     </div>
 
 </div>
