--- a/MTZfront/src/app/landing-page/landing-page.component.css
+++ b/MTZfront/src/app/landing-page/landing-page.component.css
@@ -4,7 +4,7 @@
     left: 0;
     height: 100vh;
     width: 100vw;
-    z-index: 2;
+    z-index: 1;
     background: rgb(198, 196, 233);
     background: linear-gradient(90deg, rgba(198, 196, 233, 0.7) 0%, rgba(147, 189, 221, 0.7) 50%, rgba(95, 52, 159, 0.7) 100%);
     background-repeat: no-repeat;
@@ -14,18 +14,35 @@
 }
 
 .screen-divs {
-    z-index: 3;
+    position: inherit;
+    z-index: 2;
     padding: 20px;
 }
 
 .screen-left {
+    position: relative;
+    z-index: 2;
     margin-left: 2%;
     width: 48%;
     float: left;
     padding: 20px;
 }
 
+.main-text {
+    margin-top: 30%;
+    text-align: center;
+}
+
+.main-text h1 {
+    font-family: 'Abel', sans-serif;
+}
+
+.main-text h4 {
+    font-family: 'Abel', sans-serif;
+}
+
 .screen-right {
+    position: relative;
     margin-right: 2%;
     width: 48%;
     float: left;
@@ -34,8 +51,131 @@
 }
 
 .screen-right img {
-    z-index: 2;
-    width: 600px;
-    height: 600px;
+    position: relative;
+    margin-top: -5%;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
+}
+
+.buttons {
+    position: relative;
+    justify-content: center;
+    display: flex;
+    margin-top: 10%;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Mukta:700');
+
+* {
+    box-sizing: border-box;
+}
+
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+button {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    outline: none;
+    border: 0;
+    vertical-align: middle;
+    text-decoration: none;
+    background: transparent;
+    padding: 0;
+    font-size: inherit;
+    font-family: inherit;
+}
+
+button.learn-more {
+    width: 12rem;
+    height: auto;
+}
+
+button.learn-more .circle {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    position: relative;
+    display: block;
+    margin: 0;
+    width: 3rem;
+    height: 3rem;
+    background: #282936;
+    border-radius: 1.625rem;
+}
+
+button.learn-more .circle .icon {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    background: #fff;
+}
+
+button.learn-more .circle .icon.arrow {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    left: 0.625rem;
+    width: 1.125rem;
+    height: 0.125rem;
+    background: none;
+}
+
+button.learn-more .circle .icon.arrow::before {
+    position: absolute;
+    content: '';
+    top: -0.25rem;
+    right: 0.0625rem;
+    width: 0.625rem;
+    height: 0.625rem;
+    border-top: 0.125rem solid #fff;
+    border-right: 0.125rem solid #fff;
+    transform: rotate(45deg);
+}
+
+button.learn-more .button-text {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 0.75rem 0;
+    margin: 0 0 0 1.85rem;
+    color: #282936;
+    font-weight: 700;
+    line-height: 1.6;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+button:hover .circle {
+    width: 100%;
+}
+
+button:hover .circle .icon.arrow {
+    background: #fff;
+    transform: translate(1rem, 0);
+}
+
+button:hover .button-text {
+    color: #fff;
+}
+
+@supports (display: grid) {
+    body {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-gap: 0.625rem;
+        grid-template-areas: ". main main ." ". main main .";
+    }
+
+    #container {
+        grid-area: main;
+        align-self: center;
+        justify-self: center;
+    }
 }
