--- a/MTZfront/src/app/main-cards/main-cards.component.css
+++ b/MTZfront/src/app/main-cards/main-cards.component.css
@@ -1,57 +1,113 @@
 
+.bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 0;
+  background-image: url(../../assets/img/BG.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  filter: blur(5px);
+  opacity: 70%;
+}
 
-/* Please ❤ this if you like it! */
+.info-card {
+  position: relative;
+  background-color: #102770;
+  margin: auto;
+  margin-top: 7%;
+  height: 80%;
+  width: 80%;
+  border: #0c1c00;
+
+}
+
+.screen-divs {
+  position: inherit;
+  z-index: 2;
+  padding: 20px;
+}
+
+.screen-left {
+  position: relative;
+  top: -5vh;
+  z-index: 2;
+  margin-left: 2%;
+  width: 58%;
+  float: left;
+  padding: 20px;
+}
+
+.screen-right {
+  position: relative;
+  margin-right: 2%;
+  width: 38%;
+  float: left;
+  padding: 20px;
+  object-fit: contain;
+}
+
+.cards {
+  position: relative;
+  left: -20vw;
+}
+
+
 
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
 
-:root{
+:root {
   font-size: 20px;
 }
-body{
-	font-family: 'Poppins', sans-serif;
-	font-weight: 500;
-	font-size: 15px;
-	line-height: 1.7;
-	color: #102770;
-	background-color: #ffeba7;
-	overflow-x: hidden;
-}
+
 a {
-	cursor: pointer;
+  cursor: pointer;
   transition: all 200ms linear;
 }
+
 a:hover {
-	text-decoration: none;
+  text-decoration: none;
 }
+
 .link {
   color: #c4c3ca;
 }
+
 .link:hover {
   color: #ffeba7;
 }
+
 .over-hide {
   overflow: hidden;
 }
-.size-22{
+
+.size-22 {
   font-size: 22px;
 }
-.section{
+
+.section {
   position: relative;
   width: 100%;
   z-index: 1;
   display: block;
 }
-.full-height{
+
+.full-height {
   min-height: 100vh;
 }
+
 [type="checkbox"]:checked,
-[type="checkbox"]:not(:checked){
+[type="checkbox"]:not(:checked) {
   position: absolute;
   left: -9999px;
 }
-.pricing:checked + label,
-.pricing:not(:checked) + label{
+
+.pricing:checked+label,
+.pricing:not(:checked)+label {
   position: relative;
   display: block;
   text-align: center;
@@ -73,8 +129,9 @@ a:hover {
   color: #fff;
   text-align: left;
 }
-.pricing:checked + label:before,
-.pricing:not(:checked) + label:before{
+
+.pricing:checked+label:before,
+.pricing:not(:checked)+label:before {
   position: absolute;
   content: '';
   z-index: -2;
@@ -85,8 +142,9 @@ a:hover {
   top: 0;
   left: 0;
 }
-.pricing:checked + label:after,
-.pricing:not(:checked) + label:after{
+
+.pricing:checked+label:after,
+.pricing:not(:checked)+label:after {
   position: absolute;
   content: '';
   z-index: -1;
@@ -99,12 +157,18 @@ a:hover {
   border-radius: 2px;
   transition: left 300ms linear;
 }
-.pricing:checked + label:after {
+
+.pricing:checked+label:after {
   left: 130px;
 }
+
 .block-diff {
   display: block;
   mix-blend-mode: difference;
+}
+
+.float-right {
+  margin-left: 80px;
 }
 
 .card-3d-wrap {
@@ -117,17 +181,20 @@ a:hover {
   perspective: 1000px;
   margin-top: 90px;
 }
+
 .card-3d-wrapper {
   width: 100%;
   height: 100%;
-  position:absolute;    
+  position: absolute;
   top: 0;
-  left: 0;  
+  left: 0;
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
-  transition: transform 700ms 400ms ease-out; 
+  transition: transform 700ms 400ms ease-out;
 }
-.card-front, .card-back {
+
+.card-front,
+.card-back {
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 1);
@@ -141,16 +208,19 @@ a:hover {
   -moz-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden;
-  box-shadow: 0 12px 35px 0 rgba(16, 39, 112,.07);
+  box-shadow: 0 12px 70px 0 rgba(16, 39, 112, .7);
 }
+
 .card-back {
   transform: rotateY(180deg);
 }
-.pricing:checked ~ .card-3d-wrap .card-3d-wrapper {
+
+.pricing:checked~.card-3d-wrap .card-3d-wrapper {
   transform: rotateY(180deg);
-  transition: transform 700ms 400ms ease-out; 
+  transition: transform 700ms 400ms ease-out;
 }
-.pricing-wrap{
+
+.pricing-wrap {
   position: relative;
   padding-top: 160px;
   width: 100%;
@@ -163,7 +233,8 @@ a:hover {
   -o-backface-visibility: hidden;
   backface-visibility: hidden;
 }
-.pricing-wrap h4{
+
+.pricing-wrap h4 {
   position: relative;
   width: 100%;
   display: block;
@@ -176,7 +247,8 @@ a:hover {
   color: #102770;
   transform: translate3d(0, 0, 35px) perspective(100px);
 }
-.pricing-wrap h4:before{
+
+.pricing-wrap h4:before {
   position: absolute;
   content: '';
   z-index: -1;
@@ -187,22 +259,47 @@ a:hover {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  box-shadow: 0 6px 20px 0 rgba(16, 39, 112,.3);
+  box-shadow: 0 6px 20px 0 rgba(16, 39, 112, .3);
   animation: border-transform 6s linear infinite;
 }
-.card-back .pricing-wrap h4:before{
+
+.card-back .pricing-wrap h4:before {
   background: linear-gradient(217deg, #648946, #a3c984);
 }
-@keyframes border-transform{
-    0%,100% { border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%; } 
-  14% { border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%; } 
-  28% { border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%; } 
-  42% { border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%; } 
-  56% { border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%; } 
-  70% { border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%; } 
-  84% { border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%; } 
+
+@keyframes border-transform {
+
+  0%,
+  100% {
+    border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%;
+  }
+
+  14% {
+    border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%;
+  }
+
+  28% {
+    border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%;
+  }
+
+  42% {
+    border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%;
+  }
+
+  56% {
+    border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%;
+  }
+
+  70% {
+    border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%;
+  }
+
+  84% {
+    border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%;
+  }
 }
-.pricing-wrap h2{
+
+.pricing-wrap h2 {
   position: relative;
   width: 100%;
   display: block;
@@ -215,10 +312,12 @@ a:hover {
   color: #102770;
   transform: translate3d(0, 0, 30px) perspective(100px);
 }
-.pricing-wrap h2 sup{
+
+.pricing-wrap h2 sup {
   font-size: 20px;
 }
-.pricing-wrap p{
+
+.pricing-wrap p {
   position: relative;
   width: 100%;
   display: block;
@@ -231,11 +330,13 @@ a:hover {
   color: #102770;
   transform: translate3d(0, 0, 30px) perspective(100px);
 }
+
 .card-back h2,
 .card-back p,
-.card-back h4{
+.card-back h4 {
   color: #0c1c00;
 }
+
 .link {
   position: relative;
   padding: 10px 20px;
@@ -251,23 +352,28 @@ a:hover {
   line-height: 1.2;
   transform: translate3d(0, 0, 30px) perspective(100px);
 }
+
 .link:hover {
   color: #102770;
   background-color: #ffeba7;
 }
-.card-back .link{
+
+.card-back .link {
   background-color: #0c1c00;
 }
-.card-back .link:hover{
+
+.card-back .link:hover {
   color: #0c1c00;
   background-color: #ffeba7;
 }
-.img-wrap img{
+
+.img-wrap img {
   width: 100%;
   height: auto;
   display: block;
 }
-.img-1{
+
+.img-1 {
   position: absolute;
   display: block;
   left: -160px;
@@ -279,12 +385,14 @@ a:hover {
   pointer-events: auto;
   transition: transform 400ms 1200ms ease, opacity 400ms 1200ms ease;
 }
-.pricing:checked ~ .card-3d-wrap .card-3d-wrapper .img-1 {
+
+.pricing:checked~.card-3d-wrap .card-3d-wrapper .img-1 {
   opacity: 0;
   transform: translate3d(-50px, 25px, 45px) perspective(100px);
   pointer-events: none;
   transition: transform 400ms ease, opacity 200ms 150ms ease;
 }
+
 .img-2 {
   position: absolute;
   display: block;
@@ -297,7 +405,8 @@ a:hover {
   width: 100%;
   transform: translate3d(0, 0, 15px) perspective(100px);
 }
-.img-3{
+
+.img-3 {
   position: absolute;
   display: block;
   right: -20px;
@@ -309,13 +418,15 @@ a:hover {
   pointer-events: auto;
   transition: transform 300ms 1300ms ease, opacity 200ms 1300ms ease;
 }
-.pricing:checked ~ .card-3d-wrap .card-3d-wrapper .img-3 {
+
+.pricing:checked~.card-3d-wrap .card-3d-wrapper .img-3 {
   opacity: 0;
   transform: translate3d(-50px, 5px, 55px) perspective(100px) scale(0.4);
   pointer-events: none;
   transition: transform 400ms ease, opacity 200ms 150ms ease;
 }
-.img-6{
+
+.img-6 {
   position: absolute;
   display: block;
   right: -20px;
@@ -327,14 +438,15 @@ a:hover {
   pointer-events: auto;
   transition: transform 300ms 1300ms ease, opacity 200ms 1300ms ease;
 }
-.pricing:checked ~ .card-3d-wrap .card-3d-wrapper .img-6 {
+
+.pricing:checked~.card-3d-wrap .card-3d-wrapper .img-6 {
   opacity: 0;
   transform: translate3d(0, 0, 25px) perspective(100px) scale(0.4);
   pointer-events: none;
   transition: transform 400ms ease, opacity 200ms 150ms ease;
 }
 
-.img-4{
+.img-4 {
   position: absolute;
   display: block;
   left: -60px;
@@ -346,13 +458,15 @@ a:hover {
   pointer-events: none;
   transition: transform 400ms ease, opacity 200ms 150ms ease;
 }
-.pricing:checked ~ .card-3d-wrap .card-3d-wrapper .img-4 {
+
+.pricing:checked~.card-3d-wrap .card-3d-wrapper .img-4 {
   opacity: 1;
   pointer-events: auto;
   transform: translate3d(0, 0, 45px) perspective(100px) scale(1);
   transition: transform 400ms 1200ms ease, opacity 300ms 1200ms ease;
 }
-.img-5{
+
+.img-5 {
   position: absolute;
   display: block;
   right: -70px;
@@ -364,13 +478,15 @@ a:hover {
   pointer-events: none;
   transition: transform 400ms 100ms ease, opacity 200ms 250ms ease;
 }
-.pricing:checked ~ .card-3d-wrap .card-3d-wrapper .img-5 {
+
+.pricing:checked~.card-3d-wrap .card-3d-wrapper .img-5 {
   opacity: 1;
   pointer-events: auto;
   transform: translate3d(0, 0, 35px) perspective(100px) scale(1) rotate(10deg);
   transition: transform 400ms 1300ms ease, opacity 300ms 1300ms ease;
 }
-.img-7{
+
+.img-7 {
   position: absolute;
   display: block;
   right: -30px;
@@ -382,7 +498,8 @@ a:hover {
   pointer-events: none;
   transition: transform 400ms 100ms ease, opacity 200ms 250ms ease;
 }
-.pricing:checked ~ .card-3d-wrap .card-3d-wrapper .img-7 {
+
+.pricing:checked~.card-3d-wrap .card-3d-wrapper .img-7 {
   opacity: 1;
   pointer-events: auto;
   transform: translate3d(0, 0, 35px) perspective(100px) scale(1);
@@ -392,15 +509,16 @@ a:hover {
 
 
 .logo {
-	position: fixed;
-	top: 30px;
-	right: 30px;
-	display: block;
-	z-index: 100;
-	transition: all 250ms linear;
+  position: fixed;
+  top: 30px;
+  right: 30px;
+  display: block;
+  z-index: 100;
+  transition: all 250ms linear;
 }
+
 .logo img {
-	height: 26px;
-	width: auto;
-	display: block;
+  height: 26px;
+  width: auto;
+  display: block;
 }
