--- a/MTZfront/src/app/main-cards/main-cards.component.html
+++ b/MTZfront/src/app/main-cards/main-cards.component.html
@@ -61,7 +61,11 @@
 
     <div class="screen-right">
         <div class="info-card">
-            <p></p>
+            <img src="../../assets/img/logos/transpcar (1).png" alt="Avatar" style="width:100%">
+            <div class="container">
+                <h4><b>Carros e Utilitários</b></h4>
+                <p>Informações</p>
+            </div>
         </div>
     </div>
 
