--- a/MTZfront/src/app/main-cards/main-cards.component.html
+++ b/MTZfront/src/app/main-cards/main-cards.component.html
@@ -7,7 +7,7 @@
                 <div class="row full-height justify-content-center">
                     <div class="col-12 text-center align-self-center py-5">
                         <div class="section text-center py-5 py-md-0">
-                            <input class="pricing" type="checkbox" id="pricing" name="pricing" />
+                            <input (change)="printinput()" class="pricing" type="checkbox" id="pricing" name="pricing" />
                             <label for="pricing"><span class="block-diff">Carros<span
                                         class="float-right">Motos</span></span></label>
                             <div class="card-3d-wrap mx-auto">
@@ -15,8 +15,9 @@
                                     <div class="card-front">
                                         <div class="pricing-wrap">
                                             <h4 class="mb-5">Carros e Utilitários</h4>
-                                            <h2 class="mb-2"><sup>R$</sup>399,<sup>90</sup></h2>
-                                            <p class="mb-4">instalação completa</p>
+                                            <h6 style="color: rgb(40, 67, 126)">A partir de</h6>
+                                            <h2 class="mb-2"><sup>R$</sup>299,<sup>90</sup></h2>
+                                            <p class="mb-4">Instalação inclusa</p>
                                             <p class="mb-1"><i class="uil uil-location-pin-alt size-22"></i></p>
                                             <p class="mb-4">+39,90 ao mês</p>
                                             <a href="#0" class="link">Adquirir</a>
@@ -34,7 +35,8 @@
                                     <div class="card-back">
                                         <div class="pricing-wrap">
                                             <h4 class="mb-5">Motos e Bicicletas</h4>
-                                            <h2 class="mb-2"><sup>$</sup>349,<sup>90</sup></h2>
+                                            <h6 style="color: rgb(52, 94, 41)">A partir de</h6>
+                                            <h2 class="mb-2"><sup>$</sup>259,<sup>90</sup></h2>
                                             <p class="mb-4">Instalação completa</p>
                                             <p class="mb-1"><i class="uil uil-location-pin-alt size-22"></i></p>
                                             <p class="mb-4">+35,90 ao mês</p>
@@ -61,7 +63,7 @@
 
     <div class="screen-right">
         <div class="info-card">
-            <img src="../../assets/img/logos/transpcar (1).png" alt="Avatar" style="width:100%">
+            <img src="../../assets/img/logos/transpcar (1).png" alt="Logo" style="width:100%">
             <div class="container">
                 <h4><b>Carros e Utilitários</b></h4>
                 <p>Informações</p>
