--- a/MTZfront/src/app/product-page/product-page.component.html
+++ b/MTZfront/src/app/product-page/product-page.component.html
@@ -1,1 +1,12 @@
-<p>product-page works!</p>
+<div class="bg"></div>
+
+<div class="screen-divs">
+    <div class="screen-left">
+        <app-main-cards></app-main-cards>
+    </div>
+
+    <div class="screen-right">
+        <app-add-ons-card></app-add-ons-card>
+    </div>
+
+</div>
