--- a/MTZfront/src/app/app.component.html
+++ b/MTZfront/src/app/app.component.html
@@ -1,6 +1,8 @@
 <!-- <app-login-page></app-login-page> -->
 
-<app-main-cards></app-main-cards>
+<!-- <app-main-cards></app-main-cards> -->
+
+<app-product-page></app-product-page>
 
 <!-- <app-landing-page></app-landing-page> -->
 
